--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 :root {
-    --bg-color: #ffffff;
-    --text: #000000;
-    --sec-bg: #f0f0f0;
-    --btn-color: #248bed;
-    --btn-text: #ffffff;
-    --danger-color: #dc3545
+    color-scheme: light;
 }
 
 body {
@@ -23,7 +18,7 @@ body {
 }
 
 .product-card {
-    background: var(--sec-bg);
+    background: #f5f5f5;
     padding: 15px;
     border-radius: 15px;
     text-align: center;
@@ -35,7 +30,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: var(--bg);
+    background: #ffffff;
     border-radius: 10px;
     padding: 5px;
     margin-top: 10px;
@@ -46,8 +41,8 @@ body {
     height: 30px;
     border-radius: 8px;
     border: none;
-    background: var(--btn);
-    color: var(--btn-text);
+    background: #f5f5f5;
+    color: #ffffff;
     font-weight: bold;
     font-size: 18px;
 }
@@ -81,5 +76,4 @@ body {
     border: none;
     border-radius: 10px;
     margin-top: 10px;
-
 }
