--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
 
 body {
     font-family: sans-serif;
-    background-color: var(--bg);
-    color: var(--text);
+    background-color: #ffffff;
+    color: #000000;
     margin: 0;
     padding: 15px;
     padding-bottom: 100px;
+}
+
+h1, h2, h3{
+    color: #000000;
 }
 
 .products-grid {
@@ -22,9 +26,14 @@ body {
     padding: 15px;
     border-radius: 15px;
     text-align: center;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
 
-.emoji { font-size: 40px; }
+.emoji {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
 
 .quantity-controls {
     display: flex;
@@ -41,22 +50,24 @@ body {
     height: 30px;
     border-radius: 8px;
     border: none;
-    background: #f5f5f5;
+    background: #3390ec;
     color: #ffffff;
     font-weight: bold;
     font-size: 18px;
 }
 
-.quantity { font-weight: bold; font-size: 16px; }
+.quantity { font-weight: bold; font-size: 16px; color: #000000 }
 
 .hidden { display: none; }
 
 #cart-items { margin-bottom: 20px; }
+
 .cart-row {
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
     border-bottom: 1px solid #ccc;
+    color: #ffffff;
 }
 
 .form-container input {
@@ -66,6 +77,8 @@ body {
     border-radius: 10px;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    background: #ffffff;
+    color: #0000000;
 }
 
 .secondary-btn {
@@ -76,4 +89,11 @@ body {
     border: none;
     border-radius: 10px;
     margin-top: 10px;
+}
+
+.total-price {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
+    color: #0000000;
 }
