--- a/style.css
+++ b/style.css
@@ -97,3 +97,9 @@ h1, h2, h3{
     margin-top: 15px;
     color: #0000000;
 }
+
+.quantity-controls button {
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
+}
