--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
     gap: 12px;
     padding: 12px;
     width: 100%;
+    align-items: stretch;
 }
 
 .category-card, .product-card {
@@ -78,7 +79,7 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    height: 100;
+    height: 100%;
 }
 
 .category-card:active, .product-card:active {
@@ -151,20 +152,22 @@ body {
 }
 
 .product-info {
-    padding: 10px;
+    padding: 12px;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    justify-content: space-between;
+    flex-grow: 1; 
 }
 
 .product-title {
     font-size: 14px;
     font-weight: 500;
-    margin-bottom: 5px;
-    justify-content: center;
-    align-items: center;
     text-align: center;
+    min-height: 40px;   
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin-bottom: 5px;
 }
 
 .product-price {
@@ -172,26 +175,28 @@ body {
     font-weight: bold;
     font-size: 15px;
     text-align: center;
+    margin-top: auto;  
+    margin-bottom: 5px; 
 }
 
-.product-art{
-    font-size: 15px;
-    color: rgb(106, 106, 106);
+.product-art {
+    font-size: 13px;
+    color: #888;
     text-align: center;
+    margin-bottom: 10px;
     display: block;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 
+.product-top-details {
+    margin-bottom: 10px; 
+}
 .qty-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: var(--sec-bg);
-    border-radius: auto;
-    margin-top: 10px;
+    border-radius: 12px; 
     padding: 4px;
-
 }
 
 .qty-btn {
